Fixed responsive layout problem

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,6 @@
 
 html, body {
     background-color: var(--background-color);
-    /* background-color: red; */
-    min-width: 100vh;
 }
 
 .home_section {
